--- a/Сontact_me.html
+++ b/Сontact_me.html
@@ -7,20 +7,20 @@
    <title>форма заполнения</title>
    <form action="" method="" >
       <label for="Urname">Фамилия</label>
-      <input id="text" type="text" name="Urname">
+      <input id="text" type="text" id="Urname">
 
       <br>
       <br>
       <label for="name">Имя</label>
-      <input id="text" type="text" name="name">
+      <input id="text" type="text" id="name">
       <br>
       <br>
       <label for="E-mail">Электронная почта</label>
-      <input id="e-mail" type="text" name="E=mail">
+      <input id="e-mail" type="text" id="E=mail">
       <br>
       <br>
       <label for="phone">Телефон</label>
-      <input id="text" type="text" name="phone">
+      <input id="text" type="text" id="phone">
 
       <form>
          <p>Сошлашение на обработку перосональных данных:</p>
